# mcp-braze

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: messaging_endpoints.md
src/mcp_braze/: server.py
