[project]
name = "mcp-braze"
version = "0.1.0"
description = "This project is to support ai agents to interact with braze."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "mcp>=1.4.1",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-braze = "mcp_braze:main"